# eloquent-ai-task

./: .dockerignore  .gitignore  .prototools  Dockerfile.testing  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
apps/client/: .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  moon.yml  package.json
apps/client/app/: globals.css  layout.tsx  page.tsx
apps/client/app/login/: page.tsx
apps/client/app/register/: page.tsx
apps/client/lib/auth/: constants.ts  createToken.ts  getCurrentProfile.ts  isGuest.ts  isUsernameTaken.action.ts  login.action.tsx  logout.action.ts  signup.action.ts  verifyToken.ts
apps/client/lib/components/: Sidebar.tsx
apps/client/lib/conversation/: createConversation.action.ts  decodeStreamChunk.ts  deleteConversaion.action.ts  getConversations.action.ts  getMessages.action.ts
apps/client/lib/db/: db.ts  schema.d.ts
apps/client/lib/redux/: StoreProvider.tsx  store.ts  types.ts
apps/client/lib/schemas/: registration.schema.ts
apps/migrator/: .prettierignore  README.md  eslint.config.mjs  moon.yml  package.json  tsconfig.json
apps/migrator/src/: migrate.ts
apps/migrator/src/migrations/: 1760903133CreateSetTimestamps.ts  1760903134CreateProfile.ts  1760903226CreateConversation.ts  1760951927CreateMessage.ts
apps/server/: docker-compose.yml  moon.yml  pyproject.toml
apps/server/src/server/: main.py
apps/server/src/server/ai/: config.py  db.py  graph.py  state.py
apps/server/src/server/ai/vector_store/: data.py  store.py
(+7 files in other folders)
